--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
     "stylelint-config"
   ],
   "scripts": {
-    "test": "yaspeller *.md"
+    "test": "./check-peer && yaspeller *.md"
   },
   "author": "Andrey Sitnik <andrey@sitnik.ru>",
   "license": "MIT",
   "repository": "logux/stylelint-config",
   "peerDependencies": {
-    "stylelint": "^12.0.0",
+    "stylelint": "^12.0.1",
     "stylelint-config-recess-order": "^2.0.3",
     "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^3.1.1"
+    "stylelint-order": "^4.0.0"
   },
   "devDependencies": {
     "clean-publish": "^1.1.4",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "stylelint": "^12.0.1",
+    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^4.0.0",
     "yaspeller": "^6.0.2"
   },
   "husky": {
