Check package.json om pre-commit hook

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     }
   },
   "lint-staged": {
-    "*.md": "yaspeller"
+    "*.md": "yaspeller",
+    "package.json": "./check-peer"
   },
   "yaspeller": {
     "lang": "en",
