--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "stylelint": "^13.12.0"
   },
   "devDependencies": {
-    "clean-publish": "^1.1.9",
-    "husky": "^4.3.6",
+    "clean-publish": "^2.1.0",
     "lint-staged": "^10.5.4",
+    "simple-git-hooks": "^2.0.2",
     "stylelint": "^13.12.0",
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "yaspeller": "^7.0.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.md": "yaspeller"
