--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stylelint-config"
   ],
   "scripts": {
-    "test": "stylelint test/*.css && yaspeller *.md"
+    "test": "stylelint test/*.css"
   },
   "author": "Andrey Sitnik <andrey@sitnik.ru>",
   "license": "MIT",
@@ -23,8 +23,7 @@
   },
   "devDependencies": {
     "clean-publish": "^3.4.2",
-    "stylelint": "^14.0.0",
-    "yaspeller": "^7.2.0"
+    "stylelint": "^14.0.0"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -33,17 +32,5 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none"
-  },
-  "yaspeller": {
-    "lang": "en",
-    "ignoreCapitalization": true,
-    "ignoreText": [
-      " \\(by [^)]+\\)."
-    ],
-    "dictionary": [
-      "Versioning",
-      "Stylelint",
-      "Logux"
-    ]
   }
 }
