--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^27.0.0",
+    "stylelint-gamut": "^1.1.1",
     "stylelint-order": "^5.0.0"
   },
   "peerDependencies": {
